Centralize how gitrefs are rendered in a twig macro

--- a/public/views/queue.build.html
+++ b/public/views/queue.build.html
@@ -11,7 +11,7 @@
     <td>{{ environmentName }}</td>
     <td>
         <a href="{{ referenceUrl }}">{{ reference }}</a>
-        <svg class="icon" viewBox="0 0 32 32"><use xlink:href="#github"></use></svg>
+        <svg class="icon"><use xlink:href="#{{ referenceType }}"></use></svg>
     </td>
     <td>{{ initiator }}</td>
 </tr>
