--- a/templates/partials/macros.twig
+++ b/templates/partials/macros.twig
@@ -16,3 +16,50 @@
     </div>
 
 {% endmacro %}
+
+{% macro gitref(build, sliced = false) %}
+
+    {% set resolved = build.branch|gitref %}
+    {% if resolved %}
+        {% set type = resolved|first %}
+        {% set ref = resolved|last %}
+
+        {% set icontype = 'branch' %}
+        {% if (type == 'pull') %}{% set icontype = 'pull' %}{% endif %}
+        {% if (type == 'tag') %}{% set icontype = 'tag' %}{% endif %}
+        {% if (type == 'commit') %}{% set icontype = 'commit' %}{% endif %}
+
+        {% if type in ['branch', 'tag'] and sliced and ref.length > 20 %}
+            {% set ref = ref[0:20] %}
+        {% endif %}
+
+        <a href="{{ githubReference(build.repository.githubUser, build.repository.githubRepo, build.branch) }}">
+            {% if type == 'pull' %}
+                Pull Request {{ ref }}
+            {% elseif type == 'tag' %}
+                Release {{ ref }}
+            {% elseif type == 'commit' %}
+                Commit {{ ref|commit }}
+            {% elseif type == 'branch' %}
+                {{ ref }}
+            {% endif %}
+        </a>
+        <svg class="icon"><use xlink:href="#{{ icontype }}"></use></svg>
+
+    {% endif %}
+
+{% endmacro %}
+
+{% macro gitcommit(build) %}
+    {% set resolved = build.commit|gitref %}
+    {% if resolved %}
+        {% set ref = resolved|last %}
+
+        <a href="{{ githubCommit(build.repository.githubUser, build.repository.githubRepo, build.commit) }}">
+            Commit {{ ref|commit }}
+        </a>
+        <svg class="icon"><use xlink:href="#commit"></use></svg>
+
+    {% endif %}
+
+{% endmacro %}
