--- a/templates/push/rollback.twig
+++ b/templates/push/rollback.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 {% import 'partials/pagination.twig' as pagination %}
+{% import 'partials/macros.twig' as macros %}
 
 {% set page_title = "Push history for " ~ repo.name %}
 
@@ -75,12 +76,10 @@
                 </td>
 
                 <td class="table-priority-45">
-                    <a href="{{ githubReference(push.build.repository.githubUser, push.build.repository.githubRepo, push.build.branch) }}">{{ push.build.branch|gitref }}</a>
-                    <svg class="icon"><use xlink:href="#fork"></use></svg>
+                    {{ macros.gitref(push.build, true) }}
                 </td>
                 <td class="table-priority-50">
-                    <a href="{{ githubCommit(push.build.repository.githubUser, push.build.repository.githubRepo, push.build.commit) }}">{{ push.build.commit|commit }}</a>
-                    <svg class="icon"><use xlink:href="#github"></use></svg>
+                    {{ macros.gitcommit(push.build) }}
                 </td>
                 <td>{{ push.end|html5date }}</td>
                 <td>
