Add 2.4.1 release notes

--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -220,7 +220,10 @@
     <h4 id="release-notes">Release Notes</h4>
     <ul>
         <li>
-            <a href="/docs/2.4/release-notes.html">Release 2.4</a>
+            <a href="/docs/2.4/release-notes.html">2.4</a>
+        </li>
+        <li>
+            <a href="/docs/2.4.1/release-notes.html">2.4.1</a>
         </li>
     </ul>
 {% endblock %}
