Add env var doc to enc prop page

--- a/templates/repository/encrypted/add.encrypted.property.twig
+++ b/templates/repository/encrypted/add.encrypted.property.twig
@@ -22,7 +22,7 @@
                     <label for="name">
                         Property Name
                         <small class="additional">
-                            This will be uppercased and prepended with "ENCRYPTED_" at runtime.
+                            This will be uppercased and prefixed with <code>ENCRYPTED_</code> at runtime.
                         </small>
                     </label>
                     <input name="name" id="name" maxlength="64" required value="{{ form.name }}" class="text-input">
