--- a/templates/repository/encrypted/encrypted.properties.twig
+++ b/templates/repository/encrypted/encrypted.properties.twig
@@ -48,6 +48,9 @@
             If a property is set for both <strong>Global</strong> and a specific environment, the environment-specific
             property will override the <strong>Global</strong> property.
         </p>
+        <p>
+            When decrypted and set as environment variables -  properties will be uppercased and prefixed with <code>ENCRYPTED_</code> at runtime.
+        </p>
     {% else %}
         <p>There are no encrypted properties for this repository.</p>
     {% endif %}
