Disable autocomplete on enc prop value

--- a/templates/repository/encrypted/add.encrypted.property.twig
+++ b/templates/repository/encrypted/add.encrypted.property.twig
@@ -33,7 +33,7 @@
                         Value
                         <small class="additional">This will be encrypted once saved, and only unencrypted during project build.</small>
                     </label>
-                    <input name="decrypted" id="decrypted" maxlength="200" required value="{{ form.decrypted }}" class="text-input">
+                    <input name="decrypted" id="decrypted" maxlength="200" required value="{{ form.decrypted }}" class="text-input" autocomplete="off">
                 </li>
 
                 <li>
